--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "flowbite": "^2.4.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "sequelize": "^6.37.3",
