--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.10.2",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "showdown": "^2.1.0",
