--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -11,6 +12,7 @@
     "flowbite": "^2.4.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "postcss": "^8.4.39",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "showdown": "^2.1.0",
