Add: package.json scripts에 style 명령어 추가

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "style": "npx tailwindcss -i ./static/css/styles.css -o ./static/css/output.css --watch"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
