--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
+    "passport": "^0.7.0",
     "passport-github": "^1.1.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
