--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -21,10 +21,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup node.js 18.x
+    - name: Setup node.js 20.x
       uses: actions/setup-node@v3
       with:
-        node-version: 20.x
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
