Feat: postgrid 수정 및 chart 추가

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.3",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
@@ -15,8 +16,8 @@
     "flowbite": "^2.4.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "postcss": "^8.4.39",
     "mysql2": "^3.10.2",
+    "postcss": "^8.4.39",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "showdown": "^2.1.0",
