--- a/.github/workflows/F_dev_CICD.yaml
+++ b/.github/workflows/F_dev_CICD.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: F-dev Preview CICD
+name: F-dev CICD
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
