--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "showdown": "^2.1.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "tree-cli": "^0.6.7"
