--- a/.github/workflows/Dev_CICD.yml
+++ b/.github/workflows/Dev_CICD.yml
@@ -20,7 +20,7 @@ jobs:
           run : npm install --global vercel
 
         - name: Pull Vercel Env Info
-          run : vercel pull --yes --environment=Preview --token=${{ secrets.VERCEL_TOKEN}}
+          run : vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN}}
 
         - name: Build Project Artifacts
           run : vercel build --token=${{ secrets.VERCEL_TOKEN}}
